<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>net.tenie</groupId>
		<artifactId>SQLucky-pom</artifactId>
		<version>1.0</version>
	</parent>
	<artifactId>SQLucky</artifactId>
	<packaging>jar</packaging>

	<name>SQLucky</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>16</maven.compiler.release>
		<javafx.version>16</javafx.version>
		<jfoenix.version>9.0.10</jfoenix.version>
		<richtextfx.version>0.10.6</richtextfx.version>
		<controlsfx.version>11.1.0</controlsfx.version>
		<sql.formatter.version>2.0.2</sql.formatter.version>
		<commons.io.version>2.8.0</commons.io.version>
		<slf4j.api.version>1.7.30</slf4j.api.version>
		<log4j.version>2.14.1</log4j.version>

		<sqlite.jdbc.version>3.34.0</sqlite.jdbc.version>
		<h2.jdbc.version>1.4.197</h2.jdbc.version>
		<db2jcc4.version>10.1</db2jcc4.version>
		<mysql.jdbc.version>5.1.35</mysql.jdbc.version>


	</properties>

	<organization>
		<name>https://github.com/tenie/SQLucky</name>
	</organization>

	<dependencies>
		<dependency>
			<groupId>net.tenie</groupId>
			<artifactId>SQLucky-sdk</artifactId>
			<version>1.0</version>
		</dependency>

		<dependency>
			<groupId>net.tenie</groupId>
			<artifactId>SQLucky-plugin-note</artifactId>
			<version>1.0</version>
		</dependency>

		<dependency>
			<groupId>net.tenie</groupId>
			<artifactId>SQLucky-plugin-DB2-connector</artifactId>
			<version>1.0</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-swing</artifactId>
			<version>${javafx.version}</version>
		</dependency>



		<!-- 控件库 -->
		<dependency>
			<groupId>com.jfoenix</groupId>
			<artifactId>jfoenix</artifactId>
			<version>${jfoenix.version}</version>
		</dependency>

		<dependency>
			<groupId>org.fxmisc.richtext</groupId>
			<artifactId>richtextfx</artifactId>
			<version>${richtextfx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.controlsfx</groupId>
			<artifactId>controlsfx</artifactId>
			<version>${controlsfx.version}</version>
		</dependency>

		<!-- sql 格式化 -->
		<dependency>
			<groupId>com.github.vertical-blank</groupId>
			<artifactId>sql-formatter</artifactId>
			<version>${sql.formatter.version}</version>
		</dependency>

		<!-- io 操作文件 -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons.io.version}</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.api.version}</version>
		</dependency>

		<!-- 数据库 JDBC -->
		<dependency>
			<groupId>com.ibm.db2</groupId>
			<artifactId>jcc</artifactId>
			<version>11.5.6.0</version>
		</dependency>

		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>8.0.26</version>
		</dependency>

		<dependency>
			<groupId>org.mariadb.jdbc</groupId>
			<artifactId>mariadb-java-client</artifactId>
			<version>2.7.3</version>
		</dependency>

		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>${h2.jdbc.version}</version>
		</dependency>

		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>${sqlite.jdbc.version}</version>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.2.23</version>
		</dependency>



		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${log4j.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>${log4j.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<!-- 编译插件, 指定编译版本, 和编译时参数 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<!-- 指定编译版本 -->
					<release>${maven.compiler.release}</release>
					<!-- 编译时参数 --> 
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>javafx.graphics/com.sun.javafx.application=SQLucky</arg>
						<arg>--add-exports</arg>
						<arg>org.controlsfx.controls/impl.org.controlsfx.tableview2.filter.parser=SQLucky</arg>
						<arg>--add-exports</arg>
						<arg>org.controlsfx.controls/impl.org.controlsfx.tableview2.filter.parser.aggregate=SQLucky</arg>
						<arg>--add-exports</arg>
						<arg>org.controlsfx.controls/impl.org.controlsfx.i18n=SQLucky</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<!-- javafx 插件, 启用应用 -->
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.5</version>
				<configuration>
					<release>${maven.compiler.release}</release>
					<jlinkImageName>SQLucky</jlinkImageName>
					<launcher>launcher</launcher>
					<mainClass>SQLucky/net.tenie.fx.main.MainMyDB</mainClass>
					<options>
						<option>--add-modules=javafx.controls,javafx.fxml</option>
						<option>--add-opens</option>
						<option>javafx.graphics/javafx.scene.text=ALL-UNNAMED</option>
						<option>--add-exports</option>
						<option>javafx.graphics/com.sun.javafx.text=ALL-UNNAMED</option>
						<option>--add-opens</option>
						<option>javafx.graphics/com.sun.javafx.text=ALL-UNNAMED</option>
						<option>--add-exports</option>
						<option>javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED</option>
						<option>--add-exports</option>
						<option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
						<option>--add-exports</option>
						<option>javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED</option>
						<option>--add-exports</option>
						<option>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</option>
						<option>--add-exports</option>
						<option>javafx.graphics/com.sun.javafx.application=SQLucky</option>
						<option>--add-opens</option>
						<option>java.base/java.lang=com.jfoenix</option>
						<option>--add-opens</option>
						<option>java.base/java.lang.reflect=com.jfoenix</option>
						<option>--add-opens</option>
						<option>java.base/java.lang=ALL-UNNAMED</option>
						<option>--add-opens</option>
						<option>javafx.controls/javafx.scene.control=SQLucky</option>
					</options>
				</configuration>
			</plugin>



		</plugins>
	</build>

</project>
